Public export of Nexus code:   - 6821dafed10edd5fea3fd707ec8bbb0fb765da92 by Matthew Piggott <mpiggott@sonatype.com>
GitOrigin-RevId: 6821dafed10edd5fea3fd707ec8bbb0fb765da92